# blog

./: .gitignore  Makefile  README.md  blog.cabal  cabal.project  flake.nix  index.html
.github/workflows/: deploy.yml
articles/2020/: open-source-journey.md  redesigning-a-framework.md
articles/2025/: please-use-generically.md
publications/2017/: advances-in-the-development-of-the-attitude-determination-and-control-system-of-the-cubesat-move-ii.bib  advances-in-the-development-of-the-attitude-determination-and-control-system-of-the-cubesat-move-ii.md
publications/2024/: liquid-amortization.bib  liquid-amortization.md
publications/2025/: animating-mrbnfs.bib  animating-mrbnfs.md  barendregt-convenes-with-knaster-and-tarski.bib  barendregt-convenes-with-knaster-and-tarski.md
src/: Main.hs
static/: main.css
templates/: atom.xml  post.html  postHeader.html  postList.html  publications.html  shell.html
