cabal-version:   3.0
name:            blog
version:         0.1.0.0
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          Jan van Brügge
maintainer:      supermanitu@gmail.com
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable blog
    import: warnings
    main-is: Main.hs
    hs-source-dirs: src
    default-language: GHC2021
    default-extensions: DerivingStrategies
                      , OverloadedStrings
                      , LambdaCase
    build-depends: base ^>=4.18.0.0
                 , containers
                 , aeson
                 , slick
                 , shake
                 , text
